--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate = ERROR
 spring.jpa.show-sql=true
 
+#Jackson
+spring.jackson.default-property-inclusion=NON_NULL
+
 
 
 
