--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
     </parent>
     <groupId>com.gasstation</groupId>
     <artifactId>managementsystem</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>managementsystem</name>
+    <version>v1.0-SNAPSHOT</version>
+    <name>petrol-station-management-system</name>
     <description>Demo project for Spring Boot</description>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
     </properties>
     <dependencies>
         <dependency>
