--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate = ERROR
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 
 #Jackson
 spring.jackson.default-property-inclusion=NON_NULL
